syntax = "proto3";

option csharp_namespace = "DataBaseService";

package greet;

service GameService {
  rpc SendUserInfo (UserRequest) returns (UserReply);
}

message UserRequest {
  string login = 1;
  string password = 2;
  string school_class = 3;
  string score = 4;
}

message UserReply {
  string message = 1;
}